--- a/app/blog/posts/openshift-react-tutorial.mdx
+++ b/app/blog/posts/openshift-react-tutorial.mdx
@@ -106,7 +106,7 @@ Create a new app with
 ```bash
 oc new-app https://github.com/yourusernamehere/yourrepohere
 ```
-Don't forget you can lookup help my using `oc new-app --help` to get help specificly for the new-app command.
+Don't forget you can lookup help by using `oc new-app --help` to get help specificly for the new-app command.
 
 This will create a few resources for you.
 You can view these resources with this (appname defaults to the repo name)
@@ -127,9 +127,8 @@ Lets over the resources created with `oc new-app`.
   which has a build definition and a build trigger for creating new builds.
 - [Imagestream resources](https://docs.redhat.com/en/documentation/openshift_container_platform/4.19/html/images/managing-image-streams)
   which is basicly a series of images. Buildconfigs and deployments can watch when a new image is pushed to the imagestream and can trigger a build or deployment.
-  You
 - A [Deployment resource](https://docs.redhat.com/en/documentation/openshift_container_platform/4.19/html/building_applications/deployments)
-  which more or less orcistrate orchestrate the pods of your application thru replicaset resources.
+  which more or less orcistrate the pods of your application thru replicaset resources.
   Deployment will manage the replica sets and scale them based on the configration.
   You shouldn't have to manage replica set resources or pods directly.
 - A [Service resource](https://docs.redhat.com/en/documentation/openshift_container_platform/4.19/html/network_apis/service-v1)
@@ -137,7 +136,7 @@ Lets over the resources created with `oc new-app`.
 
 Next we need to expose the service to the world!
 ```bash
-oc create route edge myroutename --service=heatmap
+oc create route edge --service=heatmap
 ```
 This will create a route resource that directs traffic from a host and path to the service.
 
