--- a/app/projects/posts/typedex.mdx
+++ b/app/projects/posts/typedex.mdx
@@ -5,4 +5,9 @@ summary: 'Uses OpenAI to recursivly generate content.'
 github: 'https://github.com/chris-kaiser-7/typedex-api'
 ---
 
-asdf
+Typedex is a Recursive GenAI content generator that takes a type with a set of attributes generates children of that type. For example if you start with a type Orc, the children generated would be something like "Orakai", "Forest Orc", and "Blood Orc". Then the children of "Blood Orc" would be something like "Ancent Blood Orc", "Bleeding Orc", "Death Orc". A tree of types is generated based on user inputs.
+
+This type tree has a multitude of use cases. Here are some examples: 
+[Example1]
+[Example2]
+[Example3]
